# simple-python-project

./: D....  D......  D.......  dd...  info.json  main.py  main.py..  pyproject.toml  t.....  t.........
